--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -10,13 +10,14 @@
 }
 
 :root {
-	--Accent: #f8a685;
-	--Background: #f7e4be;
-	--Primary: #fde6d2;
-	--Secondary: #ffd293;
-	--Text: #342f2f;
+  --Main : #E9E9E9;
+  --Accent01: #2B2B2B;;
 
-	--Katibe: "Katibeh";
-	--Karma: "Karma";
+  --Italiana: "Italiana", san-serif;
+  --Judson: "Judson", serif;
 }
 
+body {
+  background-color: var(--Main);
+  margin-inline: 12rem;
+}
