--- a/SCSS/Welcome.scss
+++ b/SCSS/Welcome.scss
@@ -1,30 +1,54 @@
 @import "style.scss";
 
 .welcome {
-  margin-top: 800px;
-  margin-bottom: 800px;
+	margin-bottom: 800px;
 
-	display: grid;
-	grid-template-columns: 2;
-	grid-template-rows: 2;
+	display: flex;
+	flex-direction: row;
+	gap: 50px;
 
-	h1 {
-		color: var(--Accent01);
-		font-family: var(--Italiana);
-		font-size: 8rem;
-		font-style: normal;
-		font-weight: 400;
-		line-height: normal;
+  align-items: center;
+
+	.profile {
+		display: grid;
+		grid-template-columns: 1;
+
+		img,
+		svg {
+			grid-area: 1/1;
+			pointer-events: none;
+			user-select: none;
+		}
+
+		img {
+			border-radius: 384.5px;
+			background: url(<path-to-image>) lightgray 50% / cover no-repeat;
+
+			translate: 30px 55px;
+		}
 	}
 
-	p {
-		color: var(--Accent01);
-		font-family: var(--Judson);
-		font-size: 1.7rem;
-		font-style: normal;
-		font-weight: 400;
-		line-height: 137%; /* 38.36px */
+	.label {
+    margin-top: 200px;
 
-		width: 789px;
+		h1 {
+			color: var(--Accent01);
+			font-family: var(--Italiana);
+			font-size: 8rem;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+		}
+
+		p {
+			color: var(--Accent01);
+			font-family: var(--Judson);
+			font-size: 1.7rem;
+			font-style: normal;
+			font-weight: 400;
+			line-height: 137%; /* 38.36px */
+
+			width: 789px;
+		}
 	}
 }
