--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -18,6 +18,17 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 500px;
+
   background-color: var(--Main);
+
   margin-inline: 12rem;
+
+  .title {
+    padding-right: 195px;
+  }
 }
