--- a/SCSS/Welcome.scss
+++ b/SCSS/Welcome.scss
@@ -5,7 +5,6 @@
 
 	display: flex;
 	flex-direction: row;
-	gap: 50px;
 
   align-items: center;
 
@@ -18,13 +17,15 @@
 			grid-area: 1/1;
 			pointer-events: none;
 			user-select: none;
+
+      width: 80%;
 		}
 
 		img {
 			border-radius: 384.5px;
 			background: url(<path-to-image>) lightgray 50% / cover no-repeat;
 
-			translate: 30px 55px;
+			translate: 30px 120px;
 		}
 	}
 
