--- a/CSS/Title.css
+++ b/CSS/Title.css
@@ -25,8 +25,16 @@ body {
   background-color: var(--Main);
   margin-inline: 12rem;
 }
+body .title,
+body .welcome {
+  pointer-events: none;
+  user-select: none;
+}
 body .title {
   padding-right: 195px;
+}
+body .welcome {
+  align-self: center;
 }
 
 .title {
