--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -11,7 +11,7 @@
 
 :root {
   --Main : #E9E9E9;
-  --Accent01: #2B2B2B;;
+  --Accent01: #1A1A1A;
 
   --Italiana: "Italiana", san-serif;
   --Judson: "Judson", serif;
