--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -28,13 +28,13 @@ body {
 
   margin-inline: 12rem;
 
-  .title,
+  .Title_section,
   .welcome {
     pointer-events: none;
     user-select: none;
   }
 
-  .title {
+  .Title_section {
     padding-right: 195px;
   }
 
