--- a/SCSS/Gallery.css
+++ b/SCSS/Gallery.css
@@ -39,6 +39,9 @@ body .welcome {
   align-self: center;
 }
 
+.gallery {
+  margin-bottom: 500vh;
+}
 .gallery .gallery_title {
   pointer-events: none;
   -webkit-user-select: none;
@@ -60,11 +63,18 @@ body .welcome {
   align-items: center;
   justify-content: center;
 }
-.gallery .gallery_collection .WebDev .subTitle h1 {
+.gallery .gallery_collection .subTitle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+.gallery .gallery_collection .subTitle h1 {
   color: var(--Accent01);
-  text-align: end;
+  text-align: center;
   font-family: var(--Italiana);
-  font-size: 4rem;
+  font-size: 2.5rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
