--- a/SCSS/Gallery.scss
+++ b/SCSS/Gallery.scss
@@ -22,18 +22,24 @@
 		align-items: center;
 		justify-content: center;
 
-		.WebDev {
-			.subTitle {
-				h1 {
-					color: var(--Accent01);
-					text-align: end;
-					font-family: var(--Italiana);
-					font-size: 4rem;
-					font-style: normal;
-					font-weight: 400;
-					line-height: normal;
-				}
+		.subTitle {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			align-items: center;
+			gap: 3rem;
+
+			h1 {
+				color: var(--Accent01);
+				text-align: center;
+				font-family: var(--Italiana);
+				font-size: 2.5rem;
+				font-style: normal;
+				font-weight: 400;
+				line-height: normal;
 			}
 		}
 	}
+
+	margin-bottom: 500vh;
 }
