--- a/SCSS/Welcome.css
+++ b/SCSS/Welcome.css
@@ -25,14 +25,14 @@ body {
   background-color: var(--Main);
   margin-inline: 12rem;
 }
-body .title,
+body .Title_section,
 body .welcome {
   pointer-events: none;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
 }
-body .title {
+body .Title_section {
   padding-right: 195px;
 }
 body .welcome {
