--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -12,6 +12,7 @@
 :root {
   --Main : #E9E9E9;
   --Accent01: #1A1A1A;
+  --Accent02: #d9d9d9;
 
   --Italiana: "Italiana", san-serif;
   --Judson: "Judson", serif;
