--- a/SCSS/Gallery.scss
+++ b/SCSS/Gallery.scss
@@ -1,45 +1,85 @@
 @import "style.scss";
 
 .gallery {
-	.gallery_title {
-		pointer-events: none;
-		user-select: none;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 
-		h1 {
-			color: var(--Accent01);
-			text-align: center;
-			font-family: var(--Italiana);
-			font-size: 8rem;
-			font-style: normal;
-			font-weight: 400;
-			line-height: normal;
-		}
-	}
+  .gallery_title {
+    pointer-events: none;
+    user-select: none;
 
-	.gallery_collection {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
+    h1 {
+      color: var(--Accent01);
+      text-align: center;
+      font-family: var(--Italiana);
+      font-size: 8rem;
+      font-style: normal;
+      font-weight: 400;
+      line-height: normal;
+    }
+  }
 
-		.subTitle {
-			display: flex;
-			flex-direction: row;
-			justify-content: center;
-			align-items: center;
-			gap: 3rem;
+  .gallery_collection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-			h1 {
-				color: var(--Accent01);
-				text-align: center;
-				font-family: var(--Italiana);
-				font-size: 2.5rem;
-				font-style: normal;
-				font-weight: 400;
-				line-height: normal;
-			}
-		}
-	}
+    gap: 80px;
 
-	margin-bottom: 500vh;
+    .subTitle {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      gap: 3rem;
+
+      h1 {
+        color: var(--Accent01);
+        text-align: center;
+        font-family: var(--Italiana);
+        font-size: 2.5rem;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+      }
+    }
+
+    .cards_collection {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+			flex-wrap: wrap;
+			gap: 25px;
+
+      .cards {
+        .outer_shell {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          width: 340px;
+          height: 500px;
+
+          border-radius: 2rem;
+          border: 5px solid var(--Accent01);
+          background: var(--Accent02);
+          box-shadow: 6px 6px 0px 0px var(--Accent01);
+
+          .inner_shell {
+            width: 300px;
+            height: 460px;
+
+            border-radius: 1.4rem;
+            border: 5px solid var(--Accent01);
+            background: url(../imgsrc/Checker.png) lightgray 50% / cover no-repeat;
+          }
+        }
+      }
+    }
+  }
+
+  margin-bottom: 500vh;
 }
